[pwCorePlugin / trunk] Fixed issue 76 : numbers are right aligned

--- a/pwCorePlugin/trunk/web/css/table.css
+++ b/pwCorePlugin/trunk/web/css/table.css
@@ -17,6 +17,16 @@
   background-color: #EECEBE;
 }
 
+/* To display numbers (amounts...) in cells */
+td.numbers {
+  text-align: right;
+}
+
+/* Display total amounts */
+td.total {
+  font-weight: bold;
+}
+
 
 
 /* ------------------------- listing tables ---------------------------- */
